--- a/pymegad/config.yaml
+++ b/pymegad/config.yaml
@@ -1,9 +1,11 @@
 switch:
   - platform: megad
-    ip: 192.168.81.73
+    ip: 192.168.88.14
     pass: sec
     name: Desktop test
     ports:
+      0:
+        name: Кухня стіл
       5:
         name: Кухня освітлення
       6:
